--- a/panel/src/sass/_custom.scss
+++ b/panel/src/sass/_custom.scss
@@ -12,6 +12,7 @@
   }
 
   .content-layout {
+    height: 100vh;
     margin-left: 200px;
     transition: all 0.2s;
   }
@@ -39,5 +40,87 @@
     font-size: 1.5rem;
     color: #dc4234;
     z-index: 99;
+  }
+}
+
+/* Progress Bar */
+.progressbar {
+  counter-reset: step;
+
+  &.sber li {
+    width: 16%;
+  }
+
+  &.delivery li {
+    width: 12%;
+  }
+
+  li {
+    list-style-type: none;
+    width: 20%;
+    float: left;
+    font-size: 0.6rem;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    color: #7d7d7d;
+
+    &:before {
+      position: relative;
+      width: 26px;
+      height: 26px;
+      content: counter(step);
+      counter-increment: step;
+      line-height: 24px;
+      border: 2px solid #7d7d7d;
+      display: block;
+      text-align: center;
+      margin: 0 auto 10px auto;
+      border-radius: 50%;
+      background-color: white;
+      z-index: 9;
+    }
+
+    &.active:before {
+      content: '\2713';
+    }
+
+    &.error:before {
+      content: '\2717';
+    }
+
+    &:after {
+      width: 100%;
+      height: 2px;
+      content: '';
+      position: absolute;
+      background-color: #7d7d7d;
+      top: 13px;
+      left: -50%;
+    }
+
+    &:first-child:after {
+      content: none;
+    }
+
+    &.active {
+      color: green;
+
+      &:before {
+        border-color: #55b776;
+      }
+
+      + li:after {
+        background-color: #55b776;
+      }
+    }
+
+    &.error {
+      color: red;
+
+      &:before {
+        border-color: red;
+      }
+    }
   }
 }
