--- a/site/resources/sass/_content.scss
+++ b/site/resources/sass/_content.scss
@@ -167,6 +167,11 @@
     .real {
         display: none;
         text-align: center;
+
+      * {
+        font-size: 1.25rem;
+        font-weight: 600;
+      }
     }
 }
 
