--- a/site/resources/sass/_footer.scss
+++ b/site/resources/sass/_footer.scss
@@ -13,12 +13,12 @@ footer {
   .footer {
     background: url(../images/footer.png) $primary;
     color: #fff;
-    padding: 1.5rem 0;
+    padding: 1.5rem;
     margin-top: 1rem;
 
     .info-phone {
       display: inline-block;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: 400;
       letter-spacing: 2px;
 
