--- a/site/resources/sass/_main.scss
+++ b/site/resources/sass/_main.scss
@@ -1,6 +1,9 @@
 @import "variables";
 
-html,
+html, body {
+  font-size: 14px;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -94,4 +97,10 @@ a {
 
 .modal-open {
   overflow: hidden;
+}
+
+@media (min-width: 576px) {
+  html, body {
+    font-size: 16px;
+  }
 }
