--- a/site/resources/sass/_variables.scss
+++ b/site/resources/sass/_variables.scss
@@ -1,2 +1,4 @@
 $primary: #27bfc1;
+
+$font-family-sans-serif: 'Source Sans Pro', sans-serif;
 $font-family-sans-serif: 'Source Sans Pro', sans-serif;
