--- a/panel/src/sass/_custom.scss
+++ b/panel/src/sass/_custom.scss
@@ -124,3 +124,12 @@
     }
   }
 }
+
+.ant-table.ant-table-small .ant-table-title,
+.ant-table.ant-table-small .ant-table-footer,
+.ant-table.ant-table-small .ant-table-thead > tr > th,
+.ant-table.ant-table-small .ant-table-tbody > tr > td,
+.ant-table.ant-table-small tfoot > tr > th,
+.ant-table.ant-table-small tfoot > tr > td {
+  font-size: 0.75rem;
+}
