--- a/site/resources/sass/_content.scss
+++ b/site/resources/sass/_content.scss
@@ -165,7 +165,7 @@
 .favorite-toggle {
   position: absolute;
   top: 1rem;
-  left: -1rem;
+  left: 1rem;
   height: 28px;
   cursor: pointer;
 }
@@ -263,7 +263,7 @@
   background: #f2f2f2;
   border-top: 2px solid #27bfc1;
   border-bottom: 2px solid #27bfc1;
-  padding: 2rem 5.5rem;
+  padding: 1rem;
   margin: 0;
 
   p {
@@ -480,6 +480,21 @@
   }
 }
 
+@media (min-width: 576px) {
+  .favorite-toggle {
+    left: 1.5rem;
+  }
+  .page {
+    padding: 2rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .page {
+    padding: 2rem 5.5rem;
+  }
+}
+
 @media (min-width: 1200px) {
   .card.product {
     .cart-add {
@@ -496,11 +511,5 @@
         max-height: 200px;
       }
     }
-  }
-}
-
-@media (min-width: 576px) {
-  .favorite-toggle {
-    left: 1.5rem;
   }
 }
