--- a/site/resources/sass/_zoom.scss
+++ b/site/resources/sass/_zoom.scss
@@ -11,7 +11,7 @@ figure.zoom {
 
   img {
     display: block;
-    max-height: 320px;
+    //max-height: 320px;
     transition: opacity .3s;
   }
 }
