--- a/client/components/accordion/Accordion.module.scss
+++ b/client/components/accordion/Accordion.module.scss
@@ -51,15 +51,12 @@
       font-size: 1rem;
       line-height: 1.5;
       overflow: hidden;
-      transition: max-height 1s, padding 1s;
+      transition: 1s;
+      transition-property: max-height, padding;
   
       &.collapsed {
         max-height: 0;
         padding: 0;
-      }
-  
-      > * {
-        padding: 1rem 2rem;
       }
     }
   }
