--- a/client/components/accordion/Accordion.module.scss
+++ b/client/components/accordion/Accordion.module.scss
@@ -17,12 +17,12 @@
         transform: rotate(-180deg);
       }
 
-      &:not(.accordion-item_header__left-icon) {
+      &:not(&__left-icon) {
         &::after {
           content: "\e803";
         }
 
-        &__icon-plus::after {
+        .accordion-item_header__icon-plus::after {
           content: "+";
         }
       }
