--- a/client/styles/_content.scss
+++ b/client/styles/_content.scss
@@ -477,6 +477,48 @@
   }
 }
 
+.loyalty-banner {
+  position: relative;
+  min-height: 414px;
+  background: transparent;
+  background-image: url(../assets/images/loyalty.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  .button {
+    position: absolute;
+    left: 108px;
+    bottom: 41px;
+    display: inline-block;
+    width: 307px;
+    height: 55px;
+    font-weight: 600;
+    line-height: 1.5;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-color: #d63517;
+    border: 1px solid #d63517;
+    padding: 0.5rem 2.5rem;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+
+    &:not(:disabled) {
+      cursor: pointer;
+    }
+
+    &:hover {
+      background-color: darken($color: #d63517, $amount: 5);
+      border-color: darken($color: #d63517, $amount: 5);
+    }
+  }
+}
+
 @media (min-width: 1200px) {
   .card.product {
     .cart-add {
