--- a/client/components/profile/Profile.module.scss
+++ b/client/components/profile/Profile.module.scss
@@ -10,13 +10,27 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.2rem;
-    font-weight: 600;
+    font-size: 1.25rem;
+    font-weight: 700;
+    letter-spacing: 2px;
     color: #fff;
     background-color: #27bfc1;
     border-radius: 1rem;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
-    padding: 1rem;
+    padding: 0.5rem 1.5rem;
+
+    > div {
+      &:first-child {
+        font-size: 48px;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        padding: 0.75rem;
+      }
+
+      &:last-child {
+        flex: 0.5;
+      }
+    }
   }
 
   &_nav {
