--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -2,8 +2,8 @@
   font-family: 'icon';
   src: url('../assets/fonts/icomoon.eot');
   src: url('../assets/fonts/icomoon.eot#iefix') format('embedded-opentype'),
-       url('../assets/fonts/icomoon.woff') format('woff'),
        url('../assets/fonts/icomoon.ttf') format('truetype'),
+       url('../assets/fonts/icomoon.woff') format('woff'),
        url('../assets/fonts/icomoon.svg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
@@ -25,14 +25,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-heart:before { content: '\e800'; } /* '' */
-.icon-heart-empty:before { content: '\e801'; } /* '' */
-.icon-truck:before { content: '\e802'; } /* '' */
-.icon-down-open-big:before { content: '\e803'; } /* '' */
-.icon-left-open-big:before { content: '\e804'; } /* '' */
-.icon-right-open-big:before { content: '\e805'; } /* '' */
-.icon-up-open-big:before { content: '\e806'; } /* '' */
-.icon-spin6:before { content: '\e839'; } /* '' */
-.icon-menu:before { content: '\f0c9'; } /* '' */
-.icon-hospital:before { content: '\f0f8'; } /* '' */
-.icon-loyalty:before { content: "\e900"; }
+.icon {
+  &-heart:before { content: '\e800'; }
+  &-heart-empty:before { content: '\e801'; }
+  &-truck:before { content: '\e802'; }
+  &-down-open-big:before { content: '\e803'; }
+  &-left-open-big:before { content: '\e804'; }
+  &-right-open-big:before { content: '\e805'; }
+  &-up-open-big:before { content: '\e806'; }
+  &-loyalty:before { content: '\e900'; }
+  &-menu:before { content: '\f0c9'; }
+  &-hospital:before { content: '\f0f8'; }
+  &-gift:before { content: '\e99f'; }
+}
