--- a/client/components/card/Card.module.scss
+++ b/client/components/card/Card.module.scss
@@ -11,35 +11,36 @@
   background-clip: border-box;
   border: 1px solid rgba($primary, 0.5);
   border-radius: 0.25rem;
-  padding: 1px;
+  padding: 1rem;
 
   &:hover {
     border-width: 2px;
-    padding: 0;
+    padding: calc(1rem - 1px);
     box-shadow: 0 0 10px rgba($black, 0.5);
 
     [class^="icon-"] {
-      top: calc(1rem - 1px);
-      left: calc(1rem - 1px);
+      top: 0;
+      left: 0;
     }
 
     .card_mod {
-      top: calc(1rem - 1px);
-      right: calc(3rem - 1px);
+      top: 0;
+      right: 24px;
     }
   }
 
   &_image {
     position: relative;
-    align-self: center;
+    flex: 1;
+    min-height: 220px;
   }
 
   &_body {
-    flex: 1 1 auto;
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1rem 1rem;
+    margin-top: 1rem;
 
     a {
       color: #337ab7;
@@ -63,10 +64,51 @@
     }
   }
 
+  &_discount {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 83px;
+    height: 30px;
+    background-image: url(../../assets/images/discount-30.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    transition-duration: 0.25s;
+    transition-timing-function: ease;
+    transition-property: width, height;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 0;
+      background: #3fae9c;
+      background-image: url(../../assets/images/discount-30-big.svg);
+      background-position: center;
+      background-repeat: no-repeat;
+      border-radius: 0.75rem;
+      opacity: 0;
+      transition-duration: 0.25s;
+      transition-timing-function: ease;
+      transition-property: width, height, opacity;
+    }
+
+    &:hover {
+      width: 100%;
+      height: 100%;
+
+      &::after {
+        width: 100%;
+        height: 320px;
+        opacity: 1;
+      }
+    }
+  }
+
   &_mod {
     position: absolute;
-    top: 1rem;
-    right: 3rem;
+    top: 0;
+    right: 24px;
     display: flex;
     width: 0;
     align-items: center;
@@ -175,12 +217,18 @@
 
   [class^="icon-"] {
     position: absolute;
-    top: 1rem;
-    left: 1rem;
+    top: 0;
+    left: 0;
     font-size: 1.75rem;
     line-height: 1;
     color: $primary;
     z-index: 9;
     cursor: pointer;
+  }
+}
+
+@media (min-width: 576px) {
+  .card_discount:hover::after {
+    height: 336px;
   }
 }
