--- a/client/components/card/Card.module.scss
+++ b/client/components/card/Card.module.scss
@@ -113,11 +113,11 @@
 
     &:hover {
       width: calc(100% + 4px);
-      height: calc(100% + 2px);
+      height: 100%;
 
       &::after {
         width: 100%;
-        height: 326px;
+        height: 318px;
         opacity: 1;
       }
     }
@@ -247,12 +247,12 @@
 
 @media (min-width: 576px) {
   .card_discount:hover::after {
-    height: 372px;
+    height: 332px;
   }
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 992px) {
   .card_discount:hover::after {
-    height: 352px;
+    height: 372px;
   }
 }
