--- a/client/components/auth/Auth.module.scss
+++ b/client/components/auth/Auth.module.scss
@@ -15,7 +15,7 @@
     height: 38px;
     text-align: center;
     background-color: transparent;
-    background-image: url(../../assets/images/button.svg);
+    background-image: url(../../assets/images/button.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -27,7 +27,7 @@
     }
 
     &.active {
-      background-image: url(../../assets/images/button-active.svg);
+      background-image: url(../../assets/images/button-active.png);
     }
 
     &::before {
