--- a/client/components/loyalty/Loyalty.module.scss
+++ b/client/components/loyalty/Loyalty.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 780px;
   background-color: transparent;
-  background-image: url(../../assets/images/loyalty/banner-mobile.png);
+  background-image: url(../../assets/images/banner/loyalty-mobile.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -16,7 +16,7 @@
     width: 290px;
     height: 60px;
     background-color: transparent;
-    background-image: url(../../assets/images/loyalty/button.svg);
+    background-image: url(../../assets/images/button.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -28,7 +28,16 @@
     }
 
     &.active {
-      background-image: url(../../assets/images/loyalty/button-active.svg);
+      background-image: url(../../assets/images/button-active.png);
+    }
+
+    &::before {
+      content: attr(data-text);
+      display: inline-block;
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #fff;
+      vertical-align: middle;
     }
   }
 }
@@ -38,7 +47,7 @@
 
   .banner {
     height: $height;
-    background-image: url(../../assets/images/loyalty/banner.png);
+    background-image: url(../../assets/images/banner/loyalty.png);
 
     .button {
       width: 217.5px;
@@ -54,7 +63,6 @@
 
   .banner {
     height: $height;
-    background-image: url(../../assets/images/loyalty/banner.png);
 
     .button {
       width: 290px;
@@ -70,7 +78,6 @@
 
   .banner {
     height: $height;
-    background-image: url(../../assets/images/loyalty/banner.png);
 
     .button {
       top: $height - 96;
@@ -84,7 +91,6 @@
 
   .banner {
     height: $height;
-    background-image: url(../../assets/images/loyalty/banner.png);
 
     .button {
       top: $height - 106;
