--- a/client/components/banner/Banner.module.scss
+++ b/client/components/banner/Banner.module.scss
@@ -2,41 +2,79 @@
   position: relative;
   display: flex;
   width: 100%;
-  height: 236px;
   background-color: transparent;
-  background-image: url(../../assets/images/banner/background-mobile.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
+
+  &_1 {
+    height: 236px;
+    background-image: url(../../assets/images/banner/background-mobile.png);
+  }
+
+  &_2 {
+    height: 204px;
+    background-image: url(../../assets/images/banner/application.png);
+  }
 }
 
 @media (min-width: 576px) {
   .banner {
-    height: 222px;
+    &_1 {
+      height: 222px;
+    }
+
+    &_2 {
+      height: 190px;
+    }
   }
 }
 
 @media (min-width: 768px) {
   .banner {
-    height: 150px;
-    background-image: url(../../assets/images/banner/background.png);
+    &_1 {
+      height: 150px;
+      background-image: url(../../assets/images/banner/background.png);
+    }
+
+    &_2 {
+      height: 256px;
+    }
   }
 }
 
 @media (min-width: 992px) {
   .banner {
-    height: 200px;
+    &_1 {
+      height: 200px;
+    }
+
+    &_2 {
+      height: 344px;
+    }
   }
 }
 
 @media (min-width: 1200px) {
   .banner {
-    height: 238px;
+    &_1 {
+      height: 238px;
+    }
+
+    &_2 {
+      height: 410px;
+    }
   }
 }
 
 @media (min-width: 1400px) {
   .banner {
-    height: 276px;
+    &_1 {
+      height: 276px;
+    }
+
+    &_2 {
+      height: 476px;
+    }
   }
 }
