--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -37,4 +37,5 @@
   &-menu:before { content: '\f0c9'; }
   &-hospital:before { content: '\f0f8'; }
   &-gift:before { content: '\e99f'; }
+  &-cross:before { content: "\ea0f"; }
 }
