--- a/client/templates/topInfo/TopInfo.module.scss
+++ b/client/templates/topInfo/TopInfo.module.scss
@@ -20,7 +20,7 @@
       min-width: 60px;
       height: 24px;
       background-color: transparent;
-      background-image: url(../../../assets/images/delivery-car.png);
+      background-image: url(../../assets/images/delivery-car.png);
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
