--- a/client/templates/profile/Profile.module.scss
+++ b/client/templates/profile/Profile.module.scss
@@ -1,15 +1,88 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .profile {
+  display: grid;
+  grid-template-columns: 0.3fr 0.7fr 1fr;
+  grid-template-rows: 0.25fr 1fr;
+  grid-gap: 1rem;
   background-color: #fff;
   border-radius: 2.5rem;
   box-shadow: 16px 16px 16px 8px rgba(34, 60, 80, 0.25);
-  padding: 2.5rem;
+  padding: 2.5rem 3rem;
+
+  &_sidebar {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    grid-gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &-menu {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      box-shadow: 4px 4px 8px 0px rgb(34 60 80 / 20%);
+      border-radius: 0.5rem;
+
+      > a {
+        width: 100%;
+        font-weight: 600;
+        text-align: center;
+        color: #ccc;
+        background: #fff;
+        padding: 0.25rem;
+
+        &:hover {
+          background: #eee;
+        }
+
+        &:first-child {
+          border-top-left-radius: 0.5rem;
+          border-top-right-radius: 0.5rem;
+        }
+
+        &:last-child {
+          border-bottom-left-radius: 0.5rem;
+          border-bottom-right-radius: 0.5rem;
+        }
+
+        &:not(:last-child) {
+          border-bottom: 1.5px solid #eee;
+        }
+      }
+    }
+
+    &-card {
+      border: 1px solid #ccc;
+      border-radius: 1rem;
+    }
+
+    &-sub-menu {
+      list-style: none;
+      background: #fff;
+      padding: 0;
+      margin: 0;
+
+      &__item {
+        font-size: 0.75rem;
+        border-radius: 0.25rem;
+        background: linear-gradient(
+          0deg,
+          rgb(255, 255, 255) 50%,
+          rgb(220, 220, 220)
+        );
+
+        a {
+          color: #ddd;
+        }
+      }
+    }
+  }
 
   &_logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
     font-size: 1.25rem;
     font-weight: 700;
     letter-spacing: 2px;
@@ -18,63 +91,20 @@
     border-radius: 1rem;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
     padding: 0.5rem 1.5rem;
-
-    > div {
-      &:first-child {
-        font-size: 48px;
-        border: 2px solid #fff;
-        border-radius: 50%;
-        padding: 0.75rem;
-      }
-
-      &:last-child {
-        flex: 0.5;
-      }
-    }
   }
 
-  &_nav {
-    display: flex;
-    align-items: center;
-
-    > a {
-      font-size: 1.2rem;
-      font-weight: 600;
-      color: #fff;
-      background-color: #27bfc1;
-      border-radius: 1rem;
-      box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
-      padding: 0.5rem 1rem;
-      margin: 0 0.5rem;
-
-      &:last-child {
-        margin-left: auto;
-      }
-    }
+  &_card-info {
+    grid-column: 2/3;
+    grid-row: 2/3;
   }
 
-  &-sidebar {
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    &_info {
-      color: #000;
-      border-radius: 1rem;
-      background: linear-gradient(90deg, #27bfc1, #c6fafb);
-      padding: 1rem;
-      margin: 1rem 0;
-    }
-  }
-
-  &-content {
+  &_content {
+    grid-column: 3/4;
+    grid-row: 1/3;
     min-height: 100%;
     color: #000;
     border-radius: 1rem;
     background: linear-gradient(90deg, #27bfc1, #c6fafb);
     padding: 1rem;
-    margin: 1rem 0;
   }
 }
