--- a/client/components/table/Table.module.scss
+++ b/client/components/table/Table.module.scss
@@ -1,26 +1,49 @@
 .table {
   width: 100%;
-  box-shadow: 4px 4px 8px 0px rgb(34 60 80 / 20%);
+  font-size: 0.9rem;
+  background: #fff;
 
-  tr {
-    background: #fff;
+  td {
+    padding: 0.25rem 0.5rem;
+  }
 
-    &:first-child {
-        border-top-left-radius: 0.5rem;
-        border-top-right-radius: 0.5rem;
+  &__striped {
+    tr:nth-child(odd) {
+      background: #eee;
     }
+  }
 
-    &:last-child {
-        border-bottom-left-radius: 0.5rem;
-        border-bottom-right-radius: 0.5rem;
-    }
+  &__shadow {
+    box-shadow: 4px 4px 8px 0px rgb(34 60 80 / 20%);
+  }
 
-    &:nth-child(odd) {
-      background: #ddd;
-    }
+  &__rounded {
+    border-radius: 0.5rem;
 
-    td {
-      padding: 0.25rem 0.5rem;
+    tr {
+      &:first-child {
+        th:first-child,
+        td:first-child {
+          border-top-left-radius: 0.5rem;
+        }
+
+        th:last-child,
+        td:last-child {
+          border-top-right-radius: 0.5rem;
+        }
+      }
+
+      &:last-child {
+        td {
+          &:first-child {
+            border-bottom-left-radius: 0.5rem;
+          }
+
+          &:last-child {
+            border-bottom-right-radius: 0.5rem;
+          }
+        }
+      }
     }
   }
 }
