--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -1,18 +1,19 @@
 @font-face {
-  font-family: 'icon';
-  src: url('../assets/fonts/icomoon.eot');
-  src: url('../assets/fonts/icomoon.eot#iefix') format('embedded-opentype'),
-       url('../assets/fonts/icomoon.ttf') format('truetype'),
-       url('../assets/fonts/icomoon.woff') format('woff'),
-       url('../assets/fonts/icomoon.svg#icomoon') format('svg');
+  font-family: "icon";
+  src: url("../assets/fonts/icomoon.eot");
+  src: url("../assets/fonts/icomoon.eot#iefix") format("embedded-opentype"),
+    url("../assets/fonts/icomoon.ttf") format("truetype"),
+    url("../assets/fonts/icomoon.woff") format("woff"),
+    url("../assets/fonts/icomoon.svg#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icon' !important;
+  font-family: "icon" !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -26,16 +27,52 @@
 }
 
 .icon {
-  &-heart:before { content: '\e800'; }
-  &-heart-empty:before { content: '\e801'; }
-  &-truck:before { content: '\e802'; }
-  &-down-open-big:before { content: '\e803'; }
-  &-left-open-big:before { content: '\e804'; }
-  &-right-open-big:before { content: '\e805'; }
-  &-up-open-big:before { content: '\e806'; }
-  &-loyalty:before { content: '\e900'; }
-  &-menu:before { content: '\f0c9'; }
-  &-hospital:before { content: '\f0f8'; }
-  &-gift:before { content: '\e99f'; }
-  &-cross:before { content: "\ea0f"; }
+  &-heart:before {
+    content: "\e800";
+  }
+  &-heart-empty:before {
+    content: "\e801";
+  }
+  &-truck:before {
+    content: "\e802";
+  }
+  &-down-open-big:before {
+    content: "\e803";
+  }
+  &-left-open-big:before {
+    content: "\e804";
+  }
+  &-right-open-big:before {
+    content: "\e805";
+  }
+  &-up-open-big:before {
+    content: "\e806";
+  }
+  &-loyalty:before {
+    content: "\e900";
+  }
+  &-menu:before {
+    content: "\f0c9";
+  }
+  &-hospital:before {
+    content: "\f0f8";
+  }
+  &-gift:before {
+    content: "\e99f";
+  }
+  &-cross:before {
+    content: "\ea0f";
+  }
+  &-home:before {
+    content: "\e901";
+  }
+  &-file-text:before {
+    content: "\e926";
+  }
+  &-stack:before {
+    content: "\e92e";
+  }
+  &-cart:before {
+    content: "\e93a";
+  }
 }
