--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -75,4 +75,13 @@
   &-cart:before {
     content: "\e93a";
   }
+  &-card:before {
+    content: "\e93f";
+  }
+  &-lock:before {
+    content: "\e98f";
+  }
+  &-loop:before {
+    content: "\ea2d";
+  }
 }
