--- a/client/components/banner/Banner.module.scss
+++ b/client/components/banner/Banner.module.scss
@@ -2,79 +2,59 @@
   position: relative;
   display: flex;
   width: 100%;
+  height: 174px;
   background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
 
   &_1 {
-    height: 236px;
     background-image: url(../../assets/images/banner/background-mobile.png);
   }
 
   &_2 {
-    height: 204px;
-    background-image: url(../../assets/images/banner/application.png);
+    background-image: url(../../assets/images/banner/application-mobile.png);
+  }
+
+  &_3 {
+    background-image: url(../../assets/images/banner/akrihin_akvadetrim.jpg);
   }
 }
 
 @media (min-width: 576px) {
   .banner {
-    &_1 {
-      height: 222px;
-    }
-
-    &_2 {
-      height: 190px;
-    }
+    height: 222px;
   }
 }
 
 @media (min-width: 768px) {
   .banner {
+    height: 150px;
+
     &_1 {
-      height: 150px;
       background-image: url(../../assets/images/banner/background.png);
     }
 
     &_2 {
-      height: 256px;
+      background-image: url(../../assets/images/banner/application.png);
     }
   }
 }
 
 @media (min-width: 992px) {
   .banner {
-    &_1 {
-      height: 200px;
-    }
-
-    &_2 {
-      height: 344px;
-    }
+    height: 202px;
   }
 }
 
 @media (min-width: 1200px) {
   .banner {
-    &_1 {
-      height: 238px;
-    }
-
-    &_2 {
-      height: 410px;
-    }
+    height: 238px;
   }
 }
 
 @media (min-width: 1400px) {
   .banner {
-    &_1 {
-      height: 276px;
-    }
-
-    &_2 {
-      height: 476px;
-    }
+    height: 276px;
   }
 }
