--- a/client/templates/profile/Profile.module.scss
+++ b/client/templates/profile/Profile.module.scss
@@ -75,14 +75,13 @@
 
     &_item {
       font-size: 0.7rem;
-      text-align: center;
       border-radius: 0px 20px 20px 0px;
       background: linear-gradient(
         180deg,
         #f3efef 0%,
         rgba(255, 255, 255, 0) 100%
       );
-      padding: 0.25rem 0.5rem;
+      padding: 0.25rem 1rem;
 
       a {
         font-size: 0.7rem;
@@ -157,7 +156,6 @@
       grid-gap: 1rem;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
 
       &-menu {
         flex-direction: column;
@@ -198,10 +196,6 @@
     }
 
     &-sub-menu {
-      &_item {
-        text-align: start;
-      }
-
       &__mobile {
         display: none;
       }
@@ -281,6 +275,10 @@
       }
     }
 
+    &-sub-menu_item {
+      padding: 0.25rem 0.5rem;
+    }
+
     &_content {
       grid-column: 3/4;
       grid-row: 1/3;
@@ -301,5 +299,11 @@
         }
       }
     }
+  }
+}
+
+@media (min-width: 1400px) {
+  .profile-sub-menu_item {
+    padding: 0.25rem 1rem;
   }
 }
