--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -78,6 +78,9 @@
   &-card:before {
     content: "\e93f";
   }
+  &-marker:before {
+    content: "\e947";
+  }
   &-lock:before {
     content: "\e98f";
   }
