--- a/client/components/card/Card.module.scss
+++ b/client/components/card/Card.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .card {
   position: relative;
@@ -33,6 +33,17 @@
     position: relative;
     flex: 1;
     min-height: 220px;
+
+    [class^="icon-"] {
+      position: absolute;
+      top: 0;
+      left: 0;
+      font-size: 1.75rem;
+      line-height: 1;
+      color: $primary;
+      z-index: 9;
+      cursor: pointer;
+    }
   }
 
   &_body {
@@ -104,7 +115,7 @@
     }
 
     &::after {
-      content: '';
+      content: "";
       display: block;
       width: 0;
       height: 0;
@@ -150,13 +161,13 @@
       background-position: center;
       border-radius: 0 1rem 1rem 0;
       z-index: 9;
-      transition: background-color .5s ease-out;
+      transition: background-color 0.5s ease-out;
     }
 
     &__prescription > .icon {
       background-image: url(../../assets/images/content/warning-red.svg);
     }
-    
+
     &__delivery > .icon {
       background-image: url(../../assets/images/content/delivery.svg);
     }
@@ -172,7 +183,7 @@
       border-radius: 1rem 0 0 1rem;
       padding: 0;
       transform: translateX(-24px);
-      transition: .5s ease-out;
+      transition: 0.5s ease-out;
       transition-property: max-width, padding, transform;
     }
 
@@ -199,7 +210,7 @@
   &_marker {
     text-align: center;
     color: #28a745;
-    font-size: 0.95rem;
+    font-size: 0.8rem;
 
     &__red {
       color: $red;
@@ -222,7 +233,8 @@
     border-radius: 0.25rem;
     padding: 0.375rem 0.75rem;
     cursor: pointer;
-    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+    transition: background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out;
 
     &:hover,
     &:focus,
@@ -238,17 +250,6 @@
       pointer-events: none;
       opacity: 0.65;
     }
-  }
-
-  [class^="icon-"] {
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-size: 1.75rem;
-    line-height: 1;
-    color: $primary;
-    z-index: 9;
-    cursor: pointer;
   }
 }
 
