add product pictures carousel

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -2,5 +2,6 @@ $black: #212529;
 $white: #fff;
 $red: #dc3545;
 $primary: #27bfc1;
+$primary-light: #a8e5e6;
 
-$font-family-sans-serif: 'Source Sans Pro', sans-serif;
+$font-family-sans-serif: "Source Sans Pro", sans-serif;
