--- a/client/components/carousel/Carousel.module.scss
+++ b/client/components/carousel/Carousel.module.scss
@@ -1,24 +1,40 @@
+@import "../../styles/variables";
+
+.container {
+  justify-content: center;
+}
+
 .carousel {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   position: relative;
   width: 800px;
   height: 500px;
   align-items: center;
   background: transparent;
+  border: none;
   box-sizing: border-box;
+
+  &_mainView,
+  &_leftView,
+  &_rightView {
+    background-color: $primary-light;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 5px;
+    transition: all 1s;
+  }
 
   &_mainView {
     width: 450px;
     height: 450px;
-    border-radius: 5px;
-    background-color: #eb9100;
     margin: 0 0.75rem;
     z-index: 1;
-    transition: all 1s;
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.5);
     }
   }
 
@@ -29,11 +45,8 @@
     align-items: center;
     width: 150px;
     height: 400px;
-    background-color: #eb9100;
-    border-radius: 5px;
     opacity: 0.5;
     cursor: pointer;
-    transition: all 1s;
 
     &:hover {
       opacity: 1;
