fix banners & add ddd product

--- a/client/components/banner/Banner.module.scss
+++ b/client/components/banner/Banner.module.scss
@@ -8,17 +8,17 @@
   background-repeat: no-repeat;
   background-size: contain;
 
-  &_1 {
-    background-image: url(../../assets/images/banner/background-mobile.png);
-  }
+  // &_1 {
+  //   background-image: url(../../assets/images/banner/background-mobile.png);
+  // }
 
-  &_2 {
-    background-image: url(../../assets/images/banner/application-mobile.png);
-  }
+  // &_2 {
+  //   background-image: url(../../assets/images/banner/application-mobile.png);
+  // }
 
-  &_3 {
-    background-image: url(../../assets/images/banner/akrihin_akvadetrim.jpg);
-  }
+  // &_3 {
+  //   background-image: url(../../assets/images/banner/akrihin_akvadetrim.jpg);
+  // }
 }
 
 @media (min-width: 576px) {
@@ -31,13 +31,13 @@
   .banner {
     height: 150px;
 
-    &_1 {
-      background-image: url(../../assets/images/banner/background.png);
-    }
+    // &_1 {
+    //   background-image: url(../../assets/images/banner/background.png);
+    // }
 
-    &_2 {
-      background-image: url(../../assets/images/banner/application.png);
-    }
+    // &_2 {
+    //   background-image: url(../../assets/images/banner/application.png);
+    // }
   }
 }
 
