--- a/client/components/loyalty/Loyalty.module.scss
+++ b/client/components/loyalty/Loyalty.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 780px;
   background-color: transparent;
-  background-image: url(../../assets/images/banner/background-mobile.png);
+  // background-image: url(../../assets/images/banner/background-mobile.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -47,7 +47,7 @@
 
   .banner {
     height: $height;
-    background-image: url(../../assets/images/banner/background.png);
+    // background-image: url(../../assets/images/banner/background.png);
 
     .button {
       width: 217.5px;
