--- a/client/components/banner/Banner.module.scss
+++ b/client/components/banner/Banner.module.scss
@@ -1,41 +1,68 @@
 .banner {
-  position: relative;
   display: flex;
   width: 100%;
-  height: 174px;
   background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-}
 
+  &,
+  &_extra {
+    position: relative;
+    height: 174px;
+  }
+
+  &_extra {
+    border-radius: 0.75rem;
+  }
+}
 
 @media (min-width: 576px) {
   .banner {
     height: 222px;
+
+    &_extra {
+      height: 145px;
+    }
   }
 }
 
 @media (min-width: 768px) {
   .banner {
-    height: 150px;
+    height: 222px;
+
+    &_extra {
+      height: 156px;
+    }
   }
 }
 
 @media (min-width: 992px) {
   .banner {
-    height: 202px;
+    height: 266px;
+
+    &_extra {
+      height: 125px;
+    }
   }
 }
 
 @media (min-width: 1200px) {
   .banner {
-    height: 238px;
+    height: 316px;
+
+    &_extra {
+      height: 150px;
+    }
   }
 }
 
 @media (min-width: 1400px) {
   .banner {
-    height: 276px;
+    height: 368px;
+
+    &_extra {
+      height: 176px;
+    }
   }
 }
