--- a/client/components/card/Card.module.scss
+++ b/client/components/card/Card.module.scss
@@ -106,7 +106,7 @@
       background-image: url(../../assets/images/discount-30.png);
 
       &.card_discount::after {
-        background-image: url(../../assets/images/discount-30-big.png);
+        background-image: url(../../assets/images/discount-30-big.jpg);
       }
     }
 
@@ -115,7 +115,7 @@
       background-image: url(../../assets/images/discount-50.png);
 
       &.card_discount::after {
-        background-image: url(../../assets/images/discount-50-big.png);
+        background-image: url(../../assets/images/discount-50-big.jpg);
       }
     }
 
